# spaceInvaders

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  build.bat  build.sh
Releases/: About.txt
Src/: spaceInvaders  spaceInvaders.cpp
src/: main.cpp  spaceInvaders.cpp
src/Assets/: gameData.db
src/Assets/Sprites/3D/spaceShips/: aggressive.dae  arctic.dae  blackout.dae  crimson.dae  desert.dae  fire.dae  glacial.dae  midnight.dae  neon.dae  ocean.dae  shadow.dae  stealth.dae
src/code/: main.cpp
src/code/1_core/backGround/: backGround.cpp
src/code/1_core/dataBase/: dataBase.cpp  dataBase.hpp
src/code/1_core/enums/: gameState.hpp  inputMode.hpp
src/code/1_core/macros/: ansiColorCodes.hpp
src/code/2_entities/aliens/: aliens.cpp  aliens.hpp
src/code/2_entities/lasers/: lasers.cpp  lasers.hpp
src/code/2_entities/motherShip/: motherShip.cpp  motherShip.hpp
src/code/2_entities/spaceShip/: spaceShip.cpp  spaceShip.hpp
src/code/3_states/10_gameOver/: gameOver.cpp  gameOver.hpp
src/code/3_states/10_paused/: play.cpp
src/code/3_states/11_closeGame/: closeGame.cpp  closeGame.hpp
src/code/3_states/1_state/: state.hpp
src/code/3_states/2_menu/: menu.cpp  menu.hpp
src/code/3_states/3_play/: play.cpp  play.hpp
src/code/3_states/4_shop/: shop.cpp  shop.hpp
src/code/3_states/5_leaderBoards/: leaderBoards.cpp  leaderBoards.hpp
src/code/3_states/5_statistics/: statistics.cpp  statistics.hpp
src/code/3_states/6_history/: history.cpp  history.hpp
src/code/3_states/6_shop/: shop.cpp
src/code/3_states/7_settings/: settings.cpp  settings.hpp
src/code/3_states/8_playing/: playing.cpp  playing.hpp
src/code/3_states/9_gameOver/: gameOver.cpp
src/code/3_states/9_paused/: paused.cpp  paused.hpp
src/code/3_states/closeGame/: closeGame.cpp
src/code/4_game/: game.cpp  game.hpp
src/code/core/: core.hpp
src/code/core/backGround/: backGround.cpp  backGround.hpp
src/code/core/dataBase/: dataBase.cpp  dataBase.hpp
src/code/core/enums/: enums.hpp  player.hpp
src/code/entities/aliens/: aliens.cpp
src/code/entities/motherShip/: motherShip.cpp
src/code/states/history/: history.cpp
src/code/states/play/: play.cpp
src/code/states/settings/: settings.cpp
src/code/states/state/: state.cpp
toAddLater/: CMakeLists.txt  build.bat
